head section refine and main section added

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Protfolio Project One</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <!-- Poppins Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,400;1,600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -18,14 +19,26 @@
         <div class="main_navigation_left">Imran's Portfolio</div>
         <div class="main_navigation_right">
           <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Services</li>
-            <li>Projects</li>
-            <li>Contact Me</li>
+            <li><a href=""></a>Home</li>
+            <li><a href=""></a>About</li>
+            <li><a href=""></a>Services</li>
+            <li><a href=""></a>Projects</li>
+            <li><a href=""></a>Contact Me</li></a>
           </ul>
         </div>
       </nav>
     </header>
+
+    <main>
+      <section class="main_section">
+        <div class="left_section">
+          <h1>Hi, My name is <span class="purple">Imran</span></h1>
+          <div class="sub_heading">Full Stack Developer</div>
+        </div>
+        <div class="right_section">
+          <img src="images/bg2.png" alt="" />
+        </div>
+      </section>
+    </main>
   </body>
 </html>
