button added and new section added

--- a/index.html
+++ b/index.html
@@ -33,11 +33,68 @@
       <section class="main_section">
         <div class="left_section">
           <h1>Hi, My name is <span class="purple">Imran</span></h1>
-          <div class="sub_heading">Full Stack Developer</div>
+          <div class="sub_heading">Full Stack Software Developer</div>
           <span id="element"></span>
+          <div class="main_btn">
+            <button class="btn">Hire Me</button>
+            <button class="btn margin_left">Let's Talk</button>
+          </div>
         </div>
         <div class="right_section">
           <img src="images/bg2.png" alt="" />
+        </div>
+      </section>
+      <section class="second_section">
+        <h1>Work Experience</h1>
+        <div class="box">
+          <div class="vertical">
+            <img class="img_top" src="images/developer.png" alt="" />
+            <div class="vertical_title">HTML Developer (2010-2021)</div>
+            <div class="vertical_desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+              repellendus laboriosam omnis.
+            </div>
+          </div>
+          <div class="vertical">
+            <img class="img_top" src="images/developer.png" alt="" />
+            <div class="vertical_title">HTML Developer (2010-2021)</div>
+            <div class="vertical_desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+              repellendus laboriosam omnis.
+            </div>
+          </div>
+          <div class="vertical">
+            <img class="img_top" src="images/developer.png" alt="" />
+            <div class="vertical_title">HTML Developer (2010-2021)</div>
+            <div class="vertical_desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+              repellendus laboriosam omnis.
+            </div>
+          </div>
+          <div class="vertical">
+            <img class="img_top" src="images/developer.png" alt="" />
+            <div class="vertical_title">HTML Developer (2010-2021)</div>
+            <div class="vertical_desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+              repellendus laboriosam omnis.
+            </div>
+          </div>
+          <div class="vertical">
+            <img class="img_top" src="images/developer.png" alt="" />
+            <div class="vertical_title">HTML Developer (2010-2021)</div>
+            <div class="vertical_desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+              repellendus laboriosam omnis.
+            </div>
+          </div>
+          <div class="vertical">
+            <img class="img_top" src="images/developer.png" alt="" />
+            <div class="vertical_title">HTML Developer (2010-2021)</div>
+            <div class="vertical_desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+              repellendus laboriosam omnis.
+            </div>
+          </div>
         </div>
       </section>
     </main>
@@ -45,7 +102,11 @@
     <!-- Setup and start animation! -->
     <script>
       var typed = new Typed("#element", {
-        strings: ["Web Designer.", "&amp;Web developer."],
+        strings: [
+          "Frontend Developer.",
+          "Backend developer.",
+          "MERN Stack Developer",
+        ],
         typeSpeed: 50,
       });
     </script>
