nav refine and work experience section code

--- a/index.html
+++ b/index.html
@@ -48,51 +48,64 @@
         <h1>Work Experience</h1>
         <div class="box">
           <div class="vertical">
-            <img class="img_top" src="images/developer.png" alt="" />
-            <div class="vertical_title">HTML Developer (2010-2021)</div>
+            <img class="img_top" src="images/html.png" alt="" />
+            <div class="vertical_title">HTML Developer (2010-2023)</div>
             <div class="vertical_desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-              repellendus laboriosam omnis.
+              The HyperText Markup Language or HTML is the standard markup
+              language for documents designed to be displayed in a web browser.
+              It is often assisted by technologies such as Cascading Style
+              Sheets and scripting languages such as JavaScript.
             </div>
           </div>
           <div class="vertical">
-            <img class="img_top" src="images/developer.png" alt="" />
-            <div class="vertical_title">HTML Developer (2010-2021)</div>
+            <img class="img_top" src="images/css.png" alt="" />
+            <div class="vertical_title">CSS Developer (2010-2023)</div>
             <div class="vertical_desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-              repellendus laboriosam omnis.
+              Cascading Style Sheets is a style sheet language used for
+              describing the presentation of a document written in a markup
+              language such as HTML or XML. CSS is a cornerstone technology of
+              the World Wide Web, alongside HTML and JavaScript.
             </div>
           </div>
           <div class="vertical">
-            <img class="img_top" src="images/developer.png" alt="" />
-            <div class="vertical_title">HTML Developer (2010-2021)</div>
+            <img class="img_top" src="images/js.png" alt="" />
+            <div class="vertical_title">JS Developer (2012-2021)</div>
             <div class="vertical_desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-              repellendus laboriosam omnis.
+              JavaScript, often abbreviated as JS, is a programming language
+              that is one of the core technologies of the World Wide Web,
+              alongside HTML and CSS. As of 2023, 98.7% of websites use
+              JavaScript on the client side for webpage behavior, often
+              incorporating third-party libraries.
             </div>
           </div>
           <div class="vertical">
-            <img class="img_top" src="images/developer.png" alt="" />
-            <div class="vertical_title">HTML Developer (2010-2021)</div>
+            <img class="img_top" src="images/react.png" alt="" />
+            <div class="vertical_title">React Developer (2015-2029)</div>
             <div class="vertical_desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-              repellendus laboriosam omnis.
+              React is a free and open-source front-end JavaScript library for
+              building user interfaces based on components. It is maintained by
+              Meta and a community of individual developers and companies. React
+              can be used to develop single-page, mobile, or server-rendered
+              applications with frameworks like Next.js
             </div>
           </div>
           <div class="vertical">
-            <img class="img_top" src="images/developer.png" alt="" />
-            <div class="vertical_title">HTML Developer (2010-2021)</div>
+            <img class="img_top" src="images/node.png" alt="" />
+            <div class="vertical_title">Node.js Developer (2010-2022)</div>
             <div class="vertical_desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-              repellendus laboriosam omnis.
+              Node.js is a cross-platform, open-source server environment that
+              can run on Windows, Linux, Unix, macOS, and more. Node.js is a
+              back-end JavaScript runtime environment, runs on the V8 JavaScript
+              Engine, and executes JavaScript code outside a web browser.
             </div>
           </div>
           <div class="vertical">
-            <img class="img_top" src="images/developer.png" alt="" />
-            <div class="vertical_title">HTML Developer (2010-2021)</div>
+            <img class="img_top" src="images/mongodb.png" alt="" />
+            <div class="vertical_title">MongoDB Developer (2011-2021)</div>
             <div class="vertical_desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-              repellendus laboriosam omnis.
+              MongoDB is a source-available cross-platform document-oriented
+              database program. Classified as a NoSQL database program, MongoDB
+              uses JSON-like documents with optional schemas.
             </div>
           </div>
         </div>
