--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           <div class="sub_heading">Full Stack Software Developer</div>
           <span id="element"></span>
           <div class="main_btn">
-            <button class="btn">Hire Me</button>
-            <button class="btn margin_left">Let's Talk</button>
+            <button class="btn">Download Resume</button>
+            <button class="btn margin_left">Talk To Hire Me</button>
           </div>
         </div>
         <div class="right_section">
