little twick and footer section added

--- a/index.html
+++ b/index.html
@@ -111,6 +111,40 @@
         </div>
       </section>
     </main>
+
+    <footer>
+      <div class="footer_flex">
+        <div>Imran's Portfolio</div>
+        <div>
+          <ul>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Podcast</a></li>
+            <li><a href="#">Guide</a></li>
+            <li><a href="#">Sponsors</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">License</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Use</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Success Page</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Terms And Condition</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer_copyright">
+        Copyright &#169 imranportfolio.com | All rights reserved
+      </div>
+    </footer>
+
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <!-- Setup and start animation! -->
     <script>
