little twick in every section

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <footer>
       <div class="footer_flex">
-        <div>Imran's Portfolio</div>
+        <div class="base_link">Imran's Portfolio</div>
         <div>
           <ul>
             <li><a href="#">Blog</a></li>
@@ -128,7 +128,7 @@
             <li><a href="#">FAQ</a></li>
             <li><a href="#">License</a></li>
             <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms of Use</a></li>
+            <li><a href="#">Terms of</a></li>
           </ul>
         </div>
         <div>
